--- a/day1/templateSyntax.html
+++ b/day1/templateSyntax.html
@@ -8,13 +8,19 @@
     <script src="../vue.js"></script>
 </head>
 <body>
-    <div id="root">hello,{{ name }}</div>
+    <div id="root">
+        <h1>插值语法</h1>
+        <h3>你好，{{ name }}</h3>
+        <hr />
+        <h1>指令语法</h1>
+        <a v-bind:href="url">点我百度一下</a>
+    </div>
     <script>
-        // 创建 Vue 实例
         new Vue({
-            el: '#root',    //el 通常用于指定当前 Vue 实例 为哪个容器服务，值通常为 css 选择器字符串
-            data: { //data 中用于存储数据，数据供 el 所指定的容器去使用， 值暂时先写成一个对象
-                name: 'Vue'
+            el: '#root',
+            data: {
+                name: 'jack',
+                url: 'https://www.baidu.com'
             }
         })
     </script>
