--- a/day1/vueDataProxy.html
+++ b/day1/vueDataProxy.html
@@ -8,13 +8,17 @@
     <script src="../vue.js"></script>
 </head>
 <body>
-    <div id="root">hello,{{ name }}</div>
+    <div id="root">
+        <h2>学校名称：{{name}}</h2>
+        <h2>学校地址：{{address}}</h2>
+    </div>
+
     <script>
-        // 创建 Vue 实例
         new Vue({
-            el: '#root',    //el 通常用于指定当前 Vue 实例 为哪个容器服务，值通常为 css 选择器字符串
-            data: { //data 中用于存储数据，数据供 el 所指定的容器去使用， 值暂时先写成一个对象
-                name: 'Vue'
+            el: '#root',
+            data: {
+                name: '北清复交',
+                address: '北京'
             }
         })
     </script>
