--- a/day3/analogDataMonitoring.html
+++ b/day3/analogDataMonitoring.html
@@ -15,6 +15,10 @@
 
         //创建一个监视的实例对象，用于监视data中属性的变化
         const obs = new Observer(data);
+        
+        //准备一个vm实例对象
+        let vm = {}
+        vm._data = data = obs
 
         function Observer(obj) {
             //汇总对象中所有的属性形成一个数组
@@ -26,6 +30,7 @@
                         return obj[k]
                     },
                     set(val) {
+                        console.log(`${k}被改了`)
                         obj[k] = val
                     }
                 })
