--- a/day3/vueDetectionDataChangePrinciple.html
+++ b/day3/vueDetectionDataChangePrinciple.html
@@ -17,7 +17,14 @@
             el: '#root',
             data: {
                 name: '清华',
-                address: '北京'
+                address: '北京',
+                student: {
+                    name: 'tom',
+                    age: 18
+                },
+                friends:[
+                    {name: 'jerry', age: 35}
+                ]
             }
         })
     </script>
