--- a/day3/listUpdateProblem.html
+++ b/day3/listUpdateProblem.html
@@ -35,7 +35,9 @@
                     // this.persons[0].age = 50
                     // this.persons[0].sex = '男'
 
-                    this.persons[0] = {id:'001', name:'马什么梅', age: 50, sex: '男'}
+                    // this.persons[0] = {id:'001', name:'马什么梅', age: 50, sex: '男'}
+
+                    this.persons.splice(0, 1, {id:'001', name:'马什么梅', age: 50, sex: '男'})
                 }
             },
         })
