--- a/day3/principleOfMonitoringArray.html
+++ b/day3/principleOfMonitoringArray.html
@@ -10,9 +10,9 @@
 <body>
     <div id="root">
         <h1>学校信息</h1>
-        <h2>学校名称：{{name}}</h2>
-        <h2>学校地址：{{address}}</h2>
-        <h2>校长：{{leader}}</h2>
+        <h2>学校名称：{{school.name}}</h2>
+        <h2>学校地址：{{school.address}}</h2>
+        <h2>校长：{{school.leader}}</h2>
         <hr />
         <h1>学生信息</h1>
         <button @click="addSex">添加一个性别属性，默认值是男</button>
@@ -25,13 +25,21 @@
                 {{f.name}}--{{f.age}}
             </li>
         </ul>
+        <h2>爱好</h2>
+        <ul>
+            <li v-for="(h, index) in hobby" :key="index">
+                {{h}}
+            </li>
+        </ul>
     </div>
     <script>
         const vm = new Vue({
             el: '#root',
             data: {
-                name: '清华',
-                address: '北京',
+                school: {
+                    name: '清华',
+                    address: '北京',
+                },
                 student: {
                     name: 'tom',
                     // sex: '男',
@@ -43,7 +51,8 @@
                         {name: 'jerry', age: 35},
                         {name: 'tony', age: 28},
                     ]
-                }
+                },
+                hobby: ['抽烟', '喝酒', '烫头']
             },
             methods: {
                 addSex() {
