--- a/day5/lifeCycle.html
+++ b/day5/lifeCycle.html
@@ -16,7 +16,14 @@
             el: '#root',
             data: {
                 opacity: 1
-            }
+            },
+            //Vue完成模板解析并把初始的真实DOM元素放入页面后（挂载完毕）调用
+            mounted() {
+                setInterval(() => {
+                    this.opacity -= 0.01
+                    if(this.opacity <= 0) this.opacity = 1
+                }, 16)
+            },
         })
     </script>
 </body>
